test-cases/final-dump/error_mode.exp
Error detected during type checking of module(s) error_mode, error_mode.tree
[91mfinal-dump/error_mode.wybe:9:35: Calling test proc error_mode.tree.right<0> in a det context
[0m[91mfinal-dump/error_mode.wybe:8:40: Calling test proc error_mode.tree.left<0> in a det context
[0m
